--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -2,6 +2,9 @@
     border: 1px solid #000000;
     width: 210mm;
     height: 297mm;
+
+    min-width: 210mm;
+    min-height: 297mm;
     
     h1{
         color:red;
