--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&family=Source+Sans+3:wght@200;300;400;500;600;700&display=swap');
+
 .Display{
     border: 1px solid #000000;
     width: 210mm;
@@ -5,8 +7,67 @@
 
     min-width: 210mm;
     min-height: 297mm;
+
+    padding: 1.3rem;
+
+    font-size: 1.2rem;
+    line-height: 1.4rem;
+
+    font-family: Helvetica, sans-serif;
     
     h1{
         color:red;
+        font-size: 3rem;
+    }
+
+    h2{
+        color: blue;
+        font-weight: bold;
+    }
+
+    hr{
+        margin-top: 0;
+        width: 95%;
+    }
+
+    ul{
+        margin-left: 2rem;
+        list-style-type: disc;
+    }
+
+    .titleText{
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+
+    .date{
+        display: flex;
+        width: 27%;
+        justify-content: space-between;
+    }
+
+    .jobContainer{
+        margin-bottom: 0.3rem;
+    }
+
+    .titleContainer{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .jobList{
+        padding: 0.3rem;
+    }
+
+    .container{
+        margin-bottom: 1.3rem;
+    }
+
+    .summary {
+        padding: 0.3rem;
+    }
+
+    .edList{
+        padding: 0.3rem;
     }
 }
