added placeholder for the CV

--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -10,7 +10,7 @@
 
     padding: 1.3rem;
 
-    font-size: 1.2rem;
+    font-size: 1rem;
     line-height: 1.4rem;
 
     font-family: Helvetica, sans-serif;
@@ -36,7 +36,7 @@
     }
 
     .titleText{
-        font-size: 1.2rem;
+        font-size: 1rem;
         font-weight: bold;
     }
 
@@ -47,7 +47,11 @@
     }
 
     .jobContainer{
-        margin-bottom: 0.3rem;
+        margin-bottom: 0.5rem;
+
+        .description{
+            margin-left: 1rem;
+        }
     }
 
     .titleContainer{
