--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -41,9 +41,12 @@
     }
 
     .date{
+        font-size: 0.9rem;
+        font-weight: bold;
         display: flex;
-        width: 27%;
+        width: 20%;
         justify-content: space-between;
+        margin-left: 1em;
     }
 
     .jobContainer{
@@ -71,7 +74,19 @@
         padding: 0.3rem;
     }
 
-    .edList{
-        padding: 0.3rem;
+    .education{
+
+        .edList{
+            padding: 0.3rem;
+        }
+
+        .subTitle{
+            font-size: 0.8rem;
+            font-weight: bold;
+        }
+
+        .description{
+            margin-left: 1rem;
+        }
     }
 }
