--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -14,11 +14,6 @@
     line-height: 1.4rem;
 
     font-family: Helvetica, sans-serif;
-    
-    h1{
-        color:red;
-        font-size: 3rem;
-    }
 
     h2{
         color: blue;
@@ -69,6 +64,23 @@
     .container{
         margin-bottom: 1.3rem;
     }
+
+    .personalInfoSection{
+        display: flex;
+        justify-content: space-between;
+
+        margin-bottom: 0.4rem;
+
+        .fullName{
+            font-weight: bolder;
+            font-size: 1.7rem;
+        }
+
+        .website{
+            text-decoration: underline;
+        }
+    }
+
 
     .summary {
         padding: 0.3rem;
