--- a/src/styles/CVForm.scss
+++ b/src/styles/CVForm.scss
@@ -2,10 +2,19 @@
 .Form{
     display: flex;
     flex-direction: column;
+    width: 50%;
+    padding: 3rem;
 
     .formTitle{
         display: flex;
         justify-content: space-between;
+        padding: 1rem;
+        border: 1px solid black;
+        margin-top: 1rem;
+    }
+    .formTitle:hover{
+        cursor: pointer;
+        background-color: #cecece;
     }
 
     .generalInfoForm{
