--- a/src/styles/CVForm.scss
+++ b/src/styles/CVForm.scss
@@ -5,17 +5,19 @@
     width: 50%;
     padding: 3rem;
 
-    .formTitle{
-        display: flex;
-        justify-content: space-between;
-        padding: 1rem;
-        border: 1px solid black;
-        margin-top: 1rem;
-        width: 100%;
+    .formDisplay{
+        transition: height 0.3s ease;
+        overflow: hidden;
     }
-    .formTitle:hover{
-        cursor: pointer;
-        background-color: #cecece;
+
+    .hidden {
+        height: 0;
+    }
+
+    .displayed {
+        height: 100%;
+        border: 1px solid black;
+        border-top: none;
     }
 
     .exportBtn{
@@ -28,16 +30,30 @@
         flex-direction: column;
         align-items: center;
 
-        .generalInfoForm{
+        .formTitle{
+            display: flex;
+            justify-content: space-between;
+            padding: 1rem;
+            border: 1px solid black;
+            margin-top: 1rem;
+            width: 100%;
+        }
+        .formTitle:hover{
+            cursor: pointer;
+            background-color: #cecece;
+        }
+
+        .formContent{
             display: flex;
             flex-direction: column;
             width: 90%;
             align-items: center;
-            border: 1px solid black;
             transition: all 500ms ease-in;
+            background-color: #e4e4e4;
     
             input{
-                margin-bottom: 1em;
+                width: 80%;
+                margin: 0.7rem;
             }
         }
 
