--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&family=Source+Sans+3:wght@200;300;400;500;600;700&display=swap');
 
-.Display{
+.Display-container{
     border: 1px solid #000000;
+}
+
+.Display{
     width: 210mm;
     height: 297mm;
 
