--- a/src/styles/CVForm.scss
+++ b/src/styles/CVForm.scss
@@ -63,7 +63,7 @@
                 }
             }
 
-            .skills{
+            .skillItem{
                 display: flex;
                 margin: 1rem;
                 align-items: center;
@@ -77,7 +77,7 @@
                 }
             }
 
-            .skillAddSection{
+            .skillSectionAdd{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -88,8 +88,113 @@
                 button{
                     width: fit-content;
                 }
+            }
 
-                .inputDiv{
+            .expItem{
+                margin:0.8rem;
+
+                .expFirstSection{
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                .expDateSection{
+                    span {
+                        margin-right: 1rem;
+                    }
+                }
+
+                .expPosition{
+                    font-weight: bold;
+                }
+
+                & > * {
+                    margin-bottom: 0.5rem;
+                }
+            }
+
+            .expSectionAdd{
+                margin:0.8rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                & > * {
+                    margin-bottom: 0.5rem;
+                }
+
+                input{
+                    width:48%;
+                }
+
+                .expFirstSectionAdd, .expDateSectionAdd{
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                .expDesc{
+                    width: 100%;
+                    height: 4rem;
+                }
+
+                button{
+                    width: fit-content;
+                }
+            }
+
+            .edItem{
+                margin:0.8rem;
+                width: 90%;
+
+                .edFirstSection{
+                    display: flex;
+                    justify-content: space-between;
+                }
+
+                .edDateSection{
+                    span {
+                        margin-right: 1rem;
+                    }
+                }
+
+                .edSchool{
+                    font-weight: bold;
+                }
+
+                .edDate{
+                    span {
+                        margin-right: 1rem;
+                    }
+                }
+
+                & > * {
+                    margin-bottom: 0.5rem;
+                }
+            }
+
+            .edSectionAdd{
+                margin:0.8rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                & > * {
+                    margin-bottom: 0.5rem;
+                }
+
+                input{
+                    width: 100%;
+                    height: 4rem;
+                }
+
+                .edFirstSectionAdd, .edDateSectionAdd{
+                    display: flex;
+                    justify-content: space-between;
+
+                    input{
+                        width:48%;
+                        height: auto;
+                    }
                 }
             }
         }
