--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -51,4 +51,19 @@ html {
 
 .App{
 	display: flex;
+	background: rgb(215, 221, 255);
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	transition: all 500ms ease-in;
+
+	@media (max-aspect-ratio: 4/3) {
+		  background: rgb(215, 221, 255);
+		  flex-direction: column;
+		  align-items: center;
+		  font-size: 0.7rem;
+
+		  .Display{
+			margin-top: -15rem;
+			transform: scale(0.4);
+		  }
+	  }
 }
