--- a/src/styles/CVDisplay.scss
+++ b/src/styles/CVDisplay.scss
@@ -1,17 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&family=Source+Sans+3:wght@200;300;400;500;600;700&display=swap');
 
 .Display{
-    border: 1px solid #000000;
     width: 210mm;
     height: 297mm;
 
     min-width: 210mm;
     min-height: 297mm;
 
+    margin: 1rem;
     padding: 1.3rem;
 
     font-size: 1rem;
     line-height: 1.4rem;
+
+    background-color: #fff;
+
+    box-shadow: 2px 2px 5px black;
 
     font-family: Helvetica, sans-serif;
 
@@ -73,7 +77,7 @@
 
         .fullName{
             font-weight: bolder;
-            font-size: 1.7rem;
+            font-size: 2.3rem;
         }
 
         .website{
