--- a/src/styles/CVForm.scss
+++ b/src/styles/CVForm.scss
@@ -75,6 +75,8 @@
                 flex-direction: row;
                 justify-content: space-between;
                 margin: 1rem;
+                width: 80%;
+                
                 .skillTitle{
                     font-weight: bold;
                 }
